[package]
name = "smaa"
version = "0.6.0"
authors = ["Jonathan Behrens <fintelia@gmail.com>"]
description = "A library for post process antialiasing using SMAA"
repository = "https://github.com/fintelia/gfx_smaa"
keywords = ["graphics", "antialiasing", "SMAA"]
categories = ["rendering", "game-engines"]
license = "MIT"
edition = "2021"

[dependencies]
naga =  git = "https://github.com/gfx-rs/naga" }
wgpu = { git = "https://github.com/gfx-rs/wgpu", features = ["glsl"] }

[dev-dependencies]
winit = "0.26"
futures = "0.3"
